# dumptorrent

./: .gitignore  CMakeLists.txt  Makefile  README.md  benc.c  benc.h  dumptorrent.c  scrapec.c
.github/workflows/: build.yaml
include/: common.h  magnet.h  torrent.h
src/: benc.c  magnet.c  main.c  scrapec.c  sha1.c  torrent.c
